# ngsolve_gui

./: .gitignore  Dockerfile  README.md  pyproject.toml  run_tests_in_docker.sh
.github/workflows/: deploy.yml  test.yml
src/ngsolve_gui/: __init__.py  app.py  app_data.py  appconfig.py  clipping.py  file_loader.py  function.py  geometry.py  keybindings.py  mesh.py  navigator.py  pick_overlay.py  plot.py  property_panel.py  region_colors.py  registry.py  run.py  run_python.py  styles.py  system_monitor.py  webgpu_tab.py
src/ngsolve_gui/sections/: __init__.py  clipping.py  colorbar.py  deformation.py  entity_numbers.py  fieldlines.py  function_options.py  geometry_options.py  geometry_selection.py  mesh_colors.py  mesh_view.py  vectors.py
tests/: conftest.py  helpers.py  test_function.py  test_function_gridfunction.py  test_function_vector.py  test_geometry.py  test_mesh.py  test_mesh_extra.py  test_plot.py
